--- a/index.html
+++ b/index.html
@@ -5,8 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honda CBR Bootstrap</title>
+    <link rel="shortcut icon" href="images/motorbike.svg" type="image/x-icon">
+    <!-- bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>HI</h1>
+
+    <!-- header start -->
+    <header class="header-sec">
+        <!-- nav start -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse nav-bg navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item text-center">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item ms-lg-4 text-center">
+                            <a class="nav-link" href="#">Shop</a>
+                        </li>
+                        <li class="nav-item ms-lg-4 text-center">
+                            <a class="nav-link" href="#">News</a>
+                        </li>
+                        <li class="nav-item ms-lg-4 text-center">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item ms-lg-4 text-center">
+                            <a class="nav-link" href="#">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+          </nav>
+        <!-- nav end -->
+        <!-- hero start -->
+        <div class="container py-lg-5 hero-sec">
+            <div class="row py-4 align-items-center">
+                <div class="col-lg-6">
+                    <p class="hero-desc">Computer-controlled digital transistorized with electronic advance</p>
+                    <h1 class="hero-header">Honda CBR 300R</h1>
+                    <p class="hero-desc">A motorcycle, often called a motorbike, bike, or cycle, is a two-wheeled motor vehicle. Motorcycle design varies greatly to suit a range of different purposes: long-distance travel, commuting, sport, and off-road riding.</p>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-general" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Purchase
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Purchase Now</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="mb-3">
+                                          <label for="recipient-name" class="col-form-label">Your Name:</label>
+                                          <input type="text" class="form-control" id="recipient-name">
+                                        </div>
+                                        <div class="mb-3">
+                                          <label for="message-text" class="col-form-label">Your Message:</label>
+                                          <textarea class="form-control" id="message-text" rows="4"></textarea>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-orange">Send Message</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img class="img-fluid hero-img" src="images/header-bike.png" alt="header-bike">
+                </div>
+            </div>
+        </div>
+        <!-- hero end -->
+    </header>
+    <!-- header end -->
+    
+    <!-- main start -->
+    <!-- main end -->
+
+    <!-- footer start -->
+    <!-- footer end -->
+    
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
