--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <p>Price is dependent with discuss. So send us a message.</p>
                                     <form>
                                         <div class="mb-3">
                                           <label for="recipient-name" class="col-form-label">Your Name:</label>
@@ -91,6 +92,78 @@
     <!-- header end -->
     
     <!-- main start -->
+    <main>
+        <!-- fetured bikes start -->
+        <section class="fetured-sec py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="section-heading">Fetured Bikes 2021</h1>
+                        <p class="section-title">Best bike collection</p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mt-5">
+                        <img class="img-fluid fetured-img fetured-img-gray" src="images/feature-bike.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mt-5">
+                        <img class="img-fluid fetured-img" src="images/feature-bike.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mt-5">
+                        <img class="img-fluid fetured-img fetured-img-gray" src="images/feature-bike.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- fetured bikes end -->
+        <!-- latest news start -->
+        <section class="news-sec py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <div class="section-heading">Latest News</div>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                        <div class="col">
+                            <div class="card bikes-card h-100">
+                                <img src="images/bike-1.png" class="card-img-top" alt="">
+                                <div class="card-body p-0 py-3">
+                                    <h5 class="card-title news-header">Ducati XDIAVEL S-73</h5>
+                                    <p class="card-text news-desc">Ducati renews the XDiavel range by introducing two new versions for 2021: the XDiavel Dark and the XDiavel Black Star. XDiavel, the Ducati cruiser that combines the best of both worlds, is renewed, still remaining true to its philosophy.</p>
+                                </div>
+                                <div class="card-body p-0 pt-2">
+                                    <a href="" class="btn btn-orange">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bikes-card h-100">
+                                <img src="images/bike-2.png" class="card-img-top" alt="">
+                                <div class="card-body p-0 py-3">
+                                    <h5 class="card-title news-header">Motorcycles & Scooters</h5>
+                                    <p class="card-text news-desc">Ducati renews the XDiavel range by introducing two new versions for 2021: the XDiavel Dark and the XDiavel Black Star. XDiavel, the Ducati cruiser that combines the best of both worlds, is renewed, still remaining true to its philosophy.</p>
+                                </div>
+                                <div class="card-body p-0 pt-2">
+                                    <a href="" class="btn btn-orange">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bikes-card h-100">
+                                <img src="images/bike-3.png" class="card-img-top" alt="">
+                                <div class="card-body p-0 py-3">
+                                    <h5 class="card-title news-header">2021 Honda CBR500R</h5>
+                                    <p class="card-text news-desc">Ducati renews the XDiavel range by introducing two new versions for 2021: the XDiavel Dark and the XDiavel Black Star. XDiavel, the Ducati cruiser that combines the best of both worlds, is renewed, still remaining true to its philosophy.</p>
+                                </div>
+                                <div class="card-body p-0 pt-2">
+                                    <a href="" class="btn btn-orange">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- latest news end -->
+    </main>
     <!-- main end -->
 
     <!-- footer start -->
