--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
                     <p class="footer-copyright">© 2020 bike. All rights reserved</p>
                 </div>
                 <div class="col-lg-2">
-                    <img src="" alt="">
+                    <p class="footer-text">Get the app</p>
+                    <img class="mt-3" src="images/Google-Play-Badge.png" alt="Google-Play-Badge">
+                    <img class="mt-3" src="images/App-Store-Badge.png" alt="App-Store-Badge">
                 </div>
             </div>
         </div>
