--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     <p class="card-text news-desc">Ducati renews the XDiavel range by introducing two new versions for 2021: the XDiavel Dark and the XDiavel Black Star. XDiavel, the Ducati cruiser that combines the best of both worlds, is renewed, still remaining true to its philosophy.</p>
                                 </div>
                                 <div class="card-body p-0 pt-2">
-                                    <a href="" class="btn btn-orange">Read More</a>
+                                    <a href="" class="btn btn-outline-orange">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                     <p class="card-text news-desc">Ducati renews the XDiavel range by introducing two new versions for 2021: the XDiavel Dark and the XDiavel Black Star. XDiavel, the Ducati cruiser that combines the best of both worlds, is renewed, still remaining true to its philosophy.</p>
                                 </div>
                                 <div class="card-body p-0 pt-2">
-                                    <a href="" class="btn btn-orange">Read More</a>
+                                    <a href="" class="btn btn-outline-orange">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -318,6 +318,70 @@
             </div>
         </section>
         <!-- FAQ end -->
+        <!-- pricing start -->
+        <section class="pricing-sec py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="section-heading">Our <span>Loan</span> Pricing</h1>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mt-5 text-center">
+                    <div class="col">
+                        <div class="card mb-4 rounded-3 shadow-sm">
+                            <div class="card-header py-3">
+                                <h4 class="my-0 fw-normal">Starter</h4>
+                            </div>
+                            <div class="card-body">
+                                <h1 class="card-title pricing-card-title">$100<small class="text-muted fw-light">/mo</small></h1>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li>12 months guarantee</li>
+                                    <li>Refund Money</li>
+                                    <li>1 helmet free</li>
+                                    <li>Hardware support</li>
+                                </ul>
+                                <button type="button" class="w-100 btn btn-lg btn-outline-orange">Get It</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-4 rounded-3 shadow-sm">
+                            <div class="card-header py-3">
+                                <h4 class="my-0 fw-normal">Pro</h4>
+                            </div>
+                            <div class="card-body">
+                                <h1 class="card-title pricing-card-title">$250<small class="text-muted fw-light">/mo</small></h1>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li>24 months guarantee</li>
+                                    <li>Refund Money</li>
+                                    <li>2 helmet free</li>
+                                    <li>Hardware support</li>
+                                </ul>
+                                <button type="button" class="w-100 btn btn-lg btn-outline-orange">Get It</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-4 rounded-3 shadow-sm border-orange">
+                            <div class="card-header py-3 text-white bg-orange border-orange">
+                                <h4 class="my-0 fw-normal">Enterprise</h4>
+                            </div>
+                            <div class="card-body">
+                                <h1 class="card-title pricing-card-title">$400<small class="text-muted fw-light">/mo</small></h1>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li>36 months guarantee</li>
+                                    <li>Refund Money</li>
+                                    <li>2 helmet and 2 custom tire free</li>
+                                    <li>Help center access</li>
+                                </ul>
+                                <button type="button" class="w-100 btn btn-lg btn-orange">Get It</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> 
+        <!-- pricing end -->
     </main>
     <!-- main end -->
 
