--- a/index.html
+++ b/index.html
@@ -382,6 +382,67 @@
             </div>
         </section> 
         <!-- pricing end -->
+        <!-- brand start -->
+        <section class="brand-sec py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="section-heading">Our <span>Partner</span> Brand</h1>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 mt-5">
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/brands/honda_bikes_logo.jpg" class="card-img-top d-block mx-auto" alt="honda_bikes_logo">
+                            <div class="card-footer text-center">
+                                <button class="btn btn-orange">Honda</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/brands/hero_bikes_logo.jpg" class="card-img-top d-block mx-auto" alt="hero_bikes_logo">
+                            <div class="card-footer text-center">
+                                <button class="btn btn-orange">Hero</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/brands/royal-enfield-logo.jpg" class="card-img-top d-block mx-auto" alt="royal-enfield-logo">
+                            <div class="card-footer text-center">
+                                <button class="btn btn-orange">Royal</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/brands/suzuki_bikes_logo.jpg" class="card-img-top d-block mx-auto" alt="suzuki_bikes_logo">
+                            <div class="card-footer text-center">
+                                <button class="btn btn-orange">Suzuki</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/brands/tvs_bikes_logo.jpg" class="card-img-top d-block mx-auto" alt="tvs_bikes_logo">
+                            <div class="card-footer text-center">
+                                <button class="btn btn-orange">TVS</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/brands/yamaha_bikes_logo.jpg" class="card-img-top d-block mx-auto" alt="yamaha_bikes_logo">
+                            <div class="card-footer text-center">
+                                <button class="btn btn-orange">Yamaha</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- brand end -->
     </main>
     <!-- main end -->
 
