--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="section-heading">Our <span>Partner</span> Brand</h1>
+                        <h1 class="section-heading">Our <span>Partnership</span> Brand</h1>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 mt-5">
