--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid hero-img" src="images/header-bike.png" alt="header-bike">
+                    <img class="img-fluid hero-img d-md-block mx-md-auto" src="images/header-bike.png" alt="header-bike">
                 </div>
             </div>
         </div>
@@ -248,7 +248,7 @@
                         <h1 class="section-heading">Frequently Asked <span>Questions</span></h1>
                     </div>
                     <div class="col-lg-6 mt-5">
-                        <img src="images/faq.png" class="img-fluid faq-img" alt="faq">
+                        <img src="images/faq.png" class="img-fluid d-md-block mx-md-auto faq-img" alt="faq">
                     </div>
                     <div class="col-lg-6 mt-5">
                         <div class="accordion" id="accordionPanelsStayOpenExample">
