--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                         <li class="nav-item ms-lg-4 text-center">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link active btn btn-login" href="#">Login</a>
                         </li>
                     </ul>
                 </div>
